tests/golden/sessionStoreMonitoring/sessionStoreMonitoring/sessionStoreMonitoring/test-instance-01/GatewayParameters-test-instance-01.yaml
apiVersion: microgateway.airlock.com/v1alpha1
kind: GatewayParameters
metadata:
  annotations:
    argocd.argoproj.io/sync-options: SkipDryRunOnMissingResource=true
  name: test-instance-01
  namespace: test-instance-01
spec:
  kubernetes:
    deployment:
      replicas: 2
