tests/golden/sessionStoreMonitoring/sessionStoreMonitoring/sessionStoreMonitoring/test-instance-01/HTTPRoute-test-instance-01.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: test-instance-01
  namespace: test-instance-01
spec: {}
