tests/golden/sessionStoreMonitoring/sessionStoreMonitoring/sessionStoreMonitoring/test-instance-01/NetworkPolicy-test-instance-01.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: test-instance-01
  namespace: test-instance-01
spec:
  podSelector:
    matchLabels:
      gateway.networking.k8s.io/gateway-name: test-instance-01
