tests/golden/sessionStoreMonitoring/sessionStoreMonitoring/sessionStoreMonitoring/test-instance-01/PodDisruptionBudget-test-instance-01.yaml
apiVersion: policy/v1
kind: PodDisruptionBudget
metadata:
  labels:
    gateway.networking.k8s.io/gateway-name: test-instance-01
  name: test-instance-01
  namespace: test-instance-01
