tests/golden/sessionStoreMonitoring/sessionStoreMonitoring/sessionStoreMonitoring/test-instance-01/SessionMonitoring.yaml
apiVersion: monitoring.coreos.com/v1
kind: PrometheusRule
metadata:
  name: session-storage-rules
  namespace: test-instance-01
spec:
  groups:
    - name: monitoring
      rules:
        - alert: AirlockMicrogatewaySessionConnectionMonitoring
          annotations:
            description: '"Microgateway in {{ $labels.namespace }} has lost its connection
              to the SessionStore "'
            runbook_url: alert.rubook.com
            summary: Microgateway has lost its connection to the sessionStore (instance
              {{ $labels.instance }})
          expr: microgateway_session_store_connection_state{namespace="vshn-test"}
            != 1
          for: 2m
          keep_firing_for: 10m
          labels:
            severity: warning
